# cli

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  build.rs  cliff.toml
.github/workflows/: ci.yml  release.yml
resources/: default.config.json  default.source.json
src/: app.rs  lib.rs  main.rs
src/assets/: collection.rs  effect.rs  event.rs  extensions.rs  mod.rs  shared.rs  sound.rs  soundbank.rs  switch.rs  switch_container.rs  validator.rs
src/commands/: mod.rs  project.rs  sdk.rs  sudo.rs  template.rs
src/common/: errors.rs  files.rs  logger.rs  mod.rs  utils.rs
src/compiler/: flatc.rs  mod.rs
src/config/: mod.rs  sdk.rs
src/database/: connection.rs  entities.rs  migrations.rs  mod.rs
src/input/: interactive.rs  mod.rs  non_interactive.rs
src/presentation/: interactive.rs  json.rs  mod.rs
tests/: README.md  feature_exit_codes_test.rs  feature_project_lifecycle_test.rs  feature_template_test.rs  unit_assets_validator_test.rs  unit_commands_asset_collection_test.rs  unit_commands_asset_effect_test.rs  unit_commands_asset_sound_test.rs  unit_commands_asset_switch_test.rs  unit_commands_project_test.rs  unit_commands_sudo_test.rs  unit_commands_template_test.rs  unit_common_fixtures_test.rs  unit_common_logger_test.rs  unit_database_connection_test.rs  unit_database_crud_test.rs  unit_database_entities_test.rs  unit_database_migrations_test.rs  unit_database_module_test.rs  unit_edge_case_standardization_test.rs  unit_errors_test.rs  unit_generated_assets_test.rs  unit_global_flags_test.rs  unit_json_output_test.rs  unit_presentation_test.rs
(+12 files in other folders)
