[package]
name = "am"
version = "0.1.0"
description = "Amplitude CLI"
authors = ["Sparky Studios"]
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.51", features = ["derive"] }
dirs = "5.0"
inquire = "0.9.1"
inquire-derive = "0.9.1"
rusqlite = { version = "0.37.0", features = ["bundled"] }
tokio = { version = "1.48.0", features = ["full"] }
log = "0.4.28"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"